--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@
   
   .hero {
     height: 400px;
-    background-image: url(/images/Banner.jpeg);
+    background-image: url(/Just-Pizza/images/Banner.jpeg);
     background-size: cover;
     background-position: center;
     display: flex;
