--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ nav a {
 .hero {
   width: 100%;
   height: 400px;
-  background-image: url(/Just-Pizza/images/Banner.jpeg);
+  background-image: url(../images/Banner.jpeg);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -185,8 +185,8 @@ nav a {
     transition: transform 0.3s ease;
 }
 .icon-card:hover { transform: scale(1.03); }
-.icon-card.grid-item.pickup { background-image: url(/Just-Pizza/images/Rectangle1.png); }
-.icon-card.grid-item.check { background-image: url(/Just-Pizza/images/Rectangle4.png); }
+.icon-card.grid-item.pickup { background-image: url(../images/Rectangle1.png); }
+.icon-card.grid-item.check { background-image: url(../images/Rectangle4.png); }
 
 /* --- Pizza Menu Styles --- */
 .menu { padding-top: 1.5rem; margin-top: 55px;}
