--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ nav a {
 .hero {
   width: 100%;
   height: 600px;
-  background-image: url(/images/Banner.jpeg);
+  background-image: url(../images/Banner.jpeg);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -318,4 +318,5 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.269);
 @media screen and (max-width: 600px) {
     .menu-group { grid-template-columns: 1fr; }
     .flex-content{grid-column: 1 / span 6;}
+
 }
