--- a/css/style.css
+++ b/css/style.css
@@ -187,8 +187,8 @@ nav a {
     transition: transform 0.3s ease;
 }
 .icon-card:hover { transform: scale(1.03); }
-.icon-card.grid-item.pickup { background-image: url(/images/Rectangle1.png); }
-.icon-card.grid-item.check { background-image: url(/images/Rectangle4.png); }
+.icon-card.grid-item.pickup { background-image: url(../images/Rectangle1.png); }
+.icon-card.grid-item.check { background-image: url(../images/Rectangle4.png); }
 
 /* --- Pizza Menu Styles --- */
 .menu { padding-top: 1.5rem; margin-top: 55px;}
@@ -320,3 +320,4 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.269);
     .flex-content{grid-column: 1 / span 6;}
 
 }
+
